converted large portions to labels

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ twitter_username: thegreenwords
 github_username:  nergmada
 
 search_enabled: true
-color_scheme: dark
+#color_scheme: dark
 aux_links:
   "Report an issue with this page":
     - "//github.com/nergmada/pddl-reference/issues/new/choose"
