Squashed ridiculous jekyll design decision to not support subdirectories through relative urls because jekyll likes to mess with peoples minds

--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,7 @@ theme: just-the-docs
 plugins:
   - jekyll-feed
   - jekyll-gitauthors
+  - jekyll-relative-urls
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
