Created slack redirect page

--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,7 @@ theme: just-the-docs
 gems:
   - jekyll-gitauthors
   - jekyll-relative-urls
+  - jekyll-redirect-from
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
