--- a/_config.yml
+++ b/_config.yml
@@ -20,13 +20,20 @@ ga_tracking: UA-78110061-3
 
 # Build settings
 markdown: kramdown
+
 theme: just-the-docs
+
+include: [_citedpapers]
+
 plugins:
   - jekyll-plannertags
   - jekyll-gitauthors
   - jekyll-redirect-from
+  - jekyll-scholar
 
-
+scholar:
+  bibliography_template: <a href="{{link}}" style="white-space:inherit;">{{reference}}</a>
+  repository: _citedpapers
   
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
